finished the nav desktop view section

--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
 <body>
 
  <!-- navigation code here -->
+ <div class="spacewalker">
+  <h1>SpaceWalkers</h1>
+</div>
   <nav>
-    <div class="title">
-      <h1>SpaceWalkers</h1>
-    </div>
     <a href="">Home</a>
     <a href="">About Us</a>
     <a href="">Blog</a>
